--- a/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/Plugin/plugin_basics.adoc
+++ b/platforms/documentation/docs/src/docs/userguide/running-builds/introduction/Plugin/plugin_basics.adoc
@@ -15,33 +15,43 @@
 [[plugin_basics]]
 = Plugin Basics
 
-Gradle is built on a plugin system.
-Gradle itself is primarily composed of infrastructure, such as a sophisticated dependency resolution engine.
-The rest of its functionality comes from plugins.
-
-A plugin is a piece of software that *provides additional functionality to the Gradle build system*.
+* Gradle == dependencyResolutionEngine + plugins
+* Gradle plugin := software / -- provides additional functionality to the -- Gradle build system
+    ** — via — https://github.com/gradle/gradle/blob/master/build-logic-commons/basics/src/main/kotlin/gradlebuild/basics/PublicApi.kt[Gradle API]
+    ** additional functionalities
+        *** new tasks
+        *** extend basic Gradle model
+        *** new configurations
+        *** …
 
 image::gradle-basic-6.png[]
 
-Plugins can be applied to a Gradle build script to *add new tasks, configurations, or other build-related capabilities*:
-
-The Java Library Plugin - `java-library` :: Used to define and build Java libraries. It compiles Java source code with the `compileJava` task, generates Javadoc with the `javadoc` task, and packages the compiled classes into a JAR file with the `jar` task.
-The Google Services Gradle Plugin - `com.google.gms:google-services` :: Enables Google APIs and Firebase services in your Android application with a configuration block called `googleServices{}` and a task called `generateReleaseAssets`.
-The Gradle Bintray Plugin - `com.jfrog.bintray` :: Allows you to publish artifacts to Bintray by configuring the plugin using the `bintray{}` block.
+* The Java Library Plugin - `java-library` -
+* The Google Services Gradle Plugin - `com.google.gms:google-services` -
+    ** enables | Android application
+        *** Google APIs
+        *** Firebase services
+    ** is configured via
+        *** `googleServices{}` configuration block
+        *** `generateReleaseAssets` task
+* The Gradle Bintray Plugin - `com.jfrog.bintray` -
+    ** allows
+        *** -- publishing artifacts to -- Bintray
+    ** is configured via
+        *** `bintray{}` block
 
 == Plugin distribution
 
-Plugins are distributed in three ways:
-
-1. **Core plugins** - Gradle develops and maintains a set of <<plugin_reference#plugin_reference,Core Plugins>>.
-2. **Community plugins** - Gradle's community shares plugins via the https://plugins.gradle.org[Gradle Plugin Portal].
-3. **Local plugins** - Gradle enables users to create custom plugins using link:{javadocPath}/org/gradle/api/Plugin.html[APIs].
+1. **Core plugins**
+    * check <<plugin_reference#plugin_reference,Core Plugins>>
+2. **Community plugins**
+    * check https://plugins.gradle.org[Gradle Plugin Portal]
+3. **Local plugins**
+    * custom own link:{javadocPath}/org/gradle/api/Plugin.html[APIs]
 
 == Applying plugins
 
-*Applying* a plugin to a project allows the plugin to extend the project's capabilities.
-
-You apply plugins in the build script using a *plugin id* (a globally unique identifier / name) and a version:
+* == add a plugin | build script
 
 [source,text]
 ----
@@ -52,31 +62,30 @@ plugins {
 
 == 1. Core plugins
 
-Gradle Core plugins are a set of plugins that are included in the Gradle distribution itself.
-These plugins provide essential functionality for building and managing projects.
-
-Some examples of core plugins include:
-
-- *java*: Provides support for building Java projects.
-- *groovy*: Adds support for compiling and testing Groovy source files.
-- *ear*: Adds support for building EAR files for enterprise applications.
-
-Core plugins are unique in that they provide short names, such as `java` for the core link:{javadocPath}/org/gradle/api/plugins/JavaPlugin.html[JavaPlugin], when applied in build scripts.
-They also do not require versions.
-To apply the `java` plugin to a project:
+* == set of plugins /
+    ** included | Gradle distribution
+    ** -- provide essential functionality for -- building and managing projects
+        *** _Example1:_  *java* -- for -- building Java projects
+        *** _Example2:_ *groovy* -- for -- compiling and testing ".Groovy"
+        *** _Example3:_ *ear* -- for -- building ".ear" for enterprise applications
+    ** <<plugin_reference#plugin_reference,Gradle Core Plugins>>
+    ** short names
+        *** _Example:_ `java` -- for the -- core link:{javadocPath}/org/gradle/api/plugins/JavaPlugin.html[JavaPlugin]
+    ** if you want to apply -> NOT required to specify versions
 
 .build.gradle.kts
 [source,kotlin]
 ----
 plugins {
-    id("java")
+    id("java")      // version pluginVersion NOT required
 }
 ----
 
-There are many <<plugin_reference#plugin_reference,Gradle Core Plugins>> users can take advantage of.
+
 
 == 2. Community plugins
 
+* TODO:
 Community plugins are plugins developed by the Gradle community, rather than being part of the core Gradle distribution.
 These plugins provide additional functionality that may be specific to certain use cases or technologies.
 
@@ -96,7 +105,7 @@ Community plugins can be published at the link:http://plugins.gradle.org/[Gradle
 
 == 3. Local plugins
 
-Custom or local plugins are developed and used within a specific project or organization.
+* Custom or local plugins are developed and used within a specific project or organization.
 These plugins are not shared publicly and are tailored to the specific needs of the project or organization.
 
 Local plugins can encapsulate common build logic, provide integrations with internal systems or tools, or abstract complex functionality into reusable components.
